# salesforce-mcp

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  server.py  test_server.py
